--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "source-map-loader": "^5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "^4.9.5",
+    "webpack": "^5.95.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,8 +51,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.113",
-    "@types/react": "^18.3.11",
-    "typescript": "^4.9.5",
-    "webpack": "^5.95.0"
+    "@types/react": "^18.3.11"
   }
 }
