included the uuid module mor unique message ID generation

--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "private": true,
   "dependencies": {
     "@adorsys-gis/contact-service": "^1.0.4",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-router-dom": "^5.3.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "source-map-loader": "^5.0.0",
-    "web-vitals": "^2.1.4",
     "typescript": "^4.9.5",
+    "uuid": "^11.0.2",
+    "web-vitals": "^2.1.4",
     "webpack": "^5.95.0"
   },
   "scripts": {
@@ -45,12 +46,12 @@
     ]
   },
   "devDependencies": {
-    "ts-loader": "^9.5.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.113",
-    "@types/react": "^18.3.11"
+    "@types/react": "^18.3.11",
+    "ts-loader": "^9.5.1"
   }
 }
