--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,5 +17,24 @@
       "sizes": "192x192",
       "type": "image/png"
     }
+  ],
+  "screenshots": [
+    {
+      "src": "/assets/sc1.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "/assets/sc2.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "/assets/sc3.png",
+      "sizes": "1280x720",
+      "type": "image/png"
+    }
   ]
 }
