--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint": "eslint src/** --ext .ts --no-error-on-unmatched-pattern",
-    "lint:fix": "eslint --fix src/** --ext .ts --no-error-on-unmatched-pattern"
+    "lint": "eslint src/** --ext .js,.jsx,.ts,.tsx --no-error-on-unmatched-pattern",
+    "lint:fix": "eslint --fix src/** --ext .js,.jsx,.ts,.tsx --no-error-on-unmatched-pattern"
   },
   "eslintConfig": {
     "extends": [
