--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.2",
     "source-map-loader": "^5.0.0",
     "typescript": "^4.9.5",
     "uuid": "^11.0.3",
