--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adorsys-gis/contact-exchange": "^1.0.0",
     "@adorsys-gis/contact-service": "^1.0.4",
     "@adorsys-gis/message-service": "^1.0.1",
     "@adorsys-gis/qr-scanner": "^1.0.3",
