--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adorsys-gis/contact-exchange": "^1.0.3",
     "@adorsys-gis/contact-service": "^1.0.4",
     "@adorsys-gis/message-service": "^1.0.1",
+    "@adorsys-gis/multiple-did-identities": "^1.0.5",
     "@adorsys-gis/qr-scanner": "^1.0.3",
     "@adorsys-gis/usepwa": "^1.0.2",
     "@emotion/react": "^11.13.3",
@@ -16,6 +18,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -30,10 +34,10 @@
     "webpack": "^5.95.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint src/** --ext .js,.jsx,.ts,.tsx --no-error-on-unmatched-pattern",
@@ -59,11 +63,14 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-typescript": "^7.26.0",
+    "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
+    "craco-babel-loader": "^1.0.4",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
