package.json update with config-overwrides.js

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@adorsys-gis/contact-service": "^1.0.4",
+    "@adorsys-gis/message-exchange": "^1.0.0",
     "@adorsys-gis/message-service": "^1.0.1",
     "@adorsys-gis/multiple-did-identities": "^1.0.6",
     "@adorsys-gis/qr-scanner": "^1.0.3",
