--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
   "name": "wallet-vc",
-  "version": "0.1.0",
   "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "eslint src/** --ext .js,.jsx,.ts,.tsx --no-error-on-unmatched-pattern",
+    "lint:fix": "eslint --fix src/** --ext .js,.jsx,.ts,.tsx --no-error-on-unmatched-pattern"
+  },
   "dependencies": {
     "@adorsys-gis/contact-service": "^1.0.4",
-    "@adorsys-gis/message-exchange": "^1.0.0",
-    "@adorsys-gis/message-service": "^1.0.1",
     "@adorsys-gis/multiple-did-identities": "^1.0.6",
     "@adorsys-gis/qr-scanner": "^1.0.3",
     "@adorsys-gis/status-service": "^1.0.0",
     "@adorsys-gis/usepwa": "^1.0.2",
+    "@adorsys-gis/message-exchange": "^1.0.1",
+    "@adorsys-gis/message-service": "^1.0.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.1.4",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.113",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
+    "framer-motion": "^12.4.1",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -37,15 +48,8 @@
     "web-vitals": "^2.1.4",
     "webpack": "^5.95.0"
   },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lint": "eslint src/** --ext .js,.jsx,.ts,.tsx --no-error-on-unmatched-pattern",
-    "lint:fix": "eslint --fix src/** --ext .js,.jsx,.ts,.tsx --no-error-on-unmatched-pattern"
+  "overrides": {
+    "esbuild": "latest"
   },
   "eslintConfig": {
     "extends": [
@@ -67,17 +71,25 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "prettier": "^3.3.3",
     "react-app-rewired": "^2.2.1",
-    "ts-loader": "^9.5.1"
+    "ts-loader": "^9.5.1",
+    "vite": "^6.1.0",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
