--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "framer-motion": "^12.4.4",
+    "message-pickup": "file:.yalc/message-pickup",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
