innitial commit for integrated changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@adorsys-gis/multiple-did-identities": [
+        "./.yalc/multiple-did-identities"
+      ]
+    },
     "target": "es6",
     "types": ["node"],
     "lib": ["dom", "dom.iterable", "esnext"],
