--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "dependencies": {
     "@adorsys-gis/contact-exchange": "^1.0.6",
     "@adorsys-gis/contact-service": "^1.0.4",
-    "@adorsys-gis/message-exchange": "^1.0.1",
     "@adorsys-gis/message-service": "^1.0.2",
-    "@adorsys-gis/multiple-did-identities": "^1.0.6",
     "@adorsys-gis/qr-scanner": "^1.0.3",
     "@adorsys-gis/status-service": "^1.0.0",
     "@adorsys-gis/usepwa": "^1.0.2",
@@ -21,9 +19,12 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "buffer": "^6.0.3",
+    "contact-exchange": "file:.yalc/contact-exchange",
     "crypto-browserify": "^3.12.1",
     "framer-motion": "^12.4.4",
+    "message-exchange": "file:.yalc/message-exchange",
     "message-pickup": "file:.yalc/message-pickup",
+    "multiple-did-identities": "file:.yalc/multiple-did-identities",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
