--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "@adorsys-gis/contact-exchange": "^1.0.6",
     "@adorsys-gis/contact-service": "^1.0.4",
-    "@adorsys-gis/message-service": "^1.0.2",
     "@adorsys-gis/qr-scanner": "^1.0.3",
     "@adorsys-gis/status-service": "^1.0.0",
     "@adorsys-gis/usepwa": "^1.0.2",
@@ -24,6 +23,7 @@
     "framer-motion": "^12.4.4",
     "message-exchange": "file:.yalc/message-exchange",
     "message-pickup": "file:.yalc/message-pickup",
+    "message-service": "file:.yalc/message-service",
     "multiple-did-identities": "file:.yalc/multiple-did-identities",
     "process": "^0.11.10",
     "react": "^18.3.1",
