--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@adorsys-gis/qr-scanner": "^1.0.3",
     "@adorsys-gis/status-service": "^1.0.0",
     "@adorsys-gis/usepwa": "^1.0.2",
+    "@adorsys-gis/web-auth-prf": "^1.0.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
@@ -33,7 +34,6 @@
     "snackbar": "^1.1.0",
     "typescript": "^4.9.5",
     "uuid": "^11.0.3",
-    "web-auth-prf": "file:.yalc/web-auth-prf",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
