--- a/package.json
+++ b/package.json
@@ -4,36 +4,36 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@adorsys-gis/contact-exchange": "^1.0.6",
+    "@adorsys-gis/contact-exchange": "^1.0.7",
     "@adorsys-gis/contact-service": "^1.0.4",
-    "@adorsys-gis/message-exchange": "^1.0.1",
-    "@adorsys-gis/message-service": "^1.0.2",
-    "@adorsys-gis/multiple-did-identities": "^1.0.6",
+    "@adorsys-gis/message-exchange": "^1.0.3",
+    "@adorsys-gis/message-service": "^1.0.3",
+    "@adorsys-gis/multiple-did-identities": "^1.0.7",
     "@adorsys-gis/qr-scanner": "^1.0.3",
     "@adorsys-gis/status-service": "^1.0.0",
     "@adorsys-gis/usepwa": "^1.0.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.4.5",
-    "@types/jest": "^27.5.2",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
-    "framer-motion": "^12.4.4",
+    "framer-motion": "^ 12.6.2",
     "process": "^0.11.10",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.15",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "^7.4.1",
     "react-swipeable": "^7.0.2",
     "snackbar": "^1.1.0",
-    "typescript": "^4.9.5",
-    "uuid": "^11.0.3",
-    "web-vitals": "^2.1.4"
+    "typescript": "^ 5.8.2",
+    "uuid": "^11.1.0",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "vite",
@@ -63,20 +63,22 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-typescript": "^7.26.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^18.19.76",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
+    "@babel/preset-typescript": "^7.27.0",
+    "@eslint/js": "^9.23.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^22.13.15",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
-    "prettier": "^3.3.3",
-    "vite": "^6.1.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-react": "^7.37.4",
+    "jsonc-eslint-parser": "^2.4.0",
+    "prettier": "^3.5.3",
+    "vite": "^6.2.4",
     "vite-plugin-node-polyfills": "^0.23.0",
     "vite-plugin-wasm": "^3.4.1"
   }
