--- a/.dockerignore
+++ b/.dockerignore
@@ -3,3 +3,10 @@ dist
 .git
 Dockerfile
 .dockerignore
+.gitignore
+README.md
+eslint.config.mjs
+tsconfig.app.json
+tsconfig.json
+tsconfig.node.json
+.github/workflows
