--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "framer-motion": "^12.6.2",
+    "jsqr": "^1.4.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
