--- a/wallet-chart/templates/deployment.yaml
+++ b/wallet-chart/templates/deployment.yaml
@@ -1,25 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: { { include "wallet-chart.fullname" . } }
+  name: {{ include "wallet-chart.fullname" . }}
   labels:
-    app: { { include "wallet-chart.name" . } }
-  namespace: { { .Release.Namespace } }
+    app: {{ include "wallet-chart.name" . }}
+  namespace: {{ .Release.Namespace }}
 spec:
-  replicas: { { .Values.wallet.replicas } }
+  replicas: {{ .Values.wallet.replicas }}
   selector:
     matchLabels:
-      app: { { include "wallet-chart.name" . } }
+      app: {{ include "wallet-chart.name" . }}
   template:
     metadata:
       labels:
-        app: { { include "wallet-chart.name" . } }
+        app: {{ include "wallet-chart.name" . }}
     spec:
       imagePullSecrets:
-        - name: { { .Values.wallet.imagePullSecret } }
+        - name: {{ .Values.wallet.imagePullSecret }}
       containers:
-        - name: { { .Chart.Name } }
+        - name: {{ .Chart.Name }}
           image: '{{ .Values.wallet.image.repository }}:{{ .Values.wallet.image.tag }}'
-          # imagePullPolicy: {{ .Values.wallet.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.wallet.image.pullPolicy }}
           ports:
-            - containerPort: { { .Values.wallet.service.targetPort } }
+            - containerPort: {{ .Values.wallet.service.targetPort }}
