--- a/wallet-chart/values.yaml
+++ b/wallet-chart/values.yaml
@@ -4,13 +4,13 @@ dnsHostname: demo-wallet.eudi-adorsys.com
 wallet:
   image:
     repository: ghcr.io/adorsys-gis/wallet-vc
-    tag: 1.1.0-alpha.0
+    tag: 1.0.0
     pullPolicy: Always
   replicas: 1
   service:
     type: ClusterIP
-    port: 8080
-    targetPort: 8080
+    port: 80
+    targetPort: 80
   ingress:
     ingressClassName: nginx
     path: /
@@ -22,4 +22,3 @@ wallet:
     secretName: eudi-adorsys-tls
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
-  imagePullSecret: ghcr-pull-secret
