--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -52,6 +52,7 @@ jobs:
           images: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
+            type=raw,value=latest,enable=${{ github.ref_type == 'branch' }}
 
       - name: Build Docker image and push to GHCR
         uses: docker/build-push-action@v6
