--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@adorsys-gis/qr-scanner": "^1.0.3",
     "@adorsys-gis/status-service": "^1.0.0",
     "@adorsys-gis/usepwa": "^1.0.2",
-    "@adorsys-gis/web-auth-prf": "^1.1.3",
+    "@adorsys-gis/web-auth": "^1.2.0",
+    "@adorsys-gis/web-auth-core": "^1.2.0",
+    "@adorsys-gis/web-auth-credential": "^1.2.0",
+    "@adorsys-gis/web-auth-encryption": "^1.2.0",
+    "@adorsys-gis/web-auth-logger": "^1.2.0",
+    "@adorsys-gis/web-auth-storage": "^1.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
