Update Dockerfile and nginx configuration for improved performance and security

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,49 @@
-events{}
-
-http {
-
-  server {
+server {
     listen 8080;
     server_name localhost;
 
-    root /usr/share/nginx/html/;
+    # Set the root directory to serve built assets
+    root /usr/share/nginx/html;
     index index.html;
-    include /etc/nginx/mime.types;
 
+    # Fallback routing for single-page applications (SPAs)
     location / {
-      try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html;
     }
-  }
 
+    # Prevent caching of the main HTML to always load the latest version
+    location = /index.html {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        expires -1;
+    }
+
+    # Long-term caching for static assets like JS, CSS, fonts, and images
+    location ~* \.(?:css|js|woff2|woff|ttf|svg|png|jpg|jpeg|gif)$ {
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        expires 1y;
+    }
+
+    # Enable gzip compression to improve performance for text-based assets
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+    gzip_min_length 1000;
+    gzip_disable "msie6";
+
+    # Fallback to index.html for 404s (for client-side routing support)
+    error_page 404 /index.html;
+
+    # Custom error page for 5xx server errors
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+
+    # Add basic security headers to protect against common vulnerabilities
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
 }
