--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -53,7 +53,7 @@ jobs:
           images: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
-            type=raw,value=latest,enable=${{ github.ref_type == 'branch' }}
+            # type=raw,value=latest,enable=${{ github.ref_type == 'branch' }}
             ${{ github.ref == 'refs/heads/test-wallet' && 'develop-latest' || '' }}
 
       - name: Build Docker image and push to GHCR
