--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -6,14 +6,18 @@ on:
 jobs:
   create-pr:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
-      - uses: actions/checkout@v3
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Update image versions"
-          title: "Automated image updates"
-          body: "This PR contains automated updates to image versions."
-          base: test-wallet
-          branch: image-updates
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr create \
+            --base test-wallet \
+            --head image-updates \
+            --title "Automated image updates" \
+            --body "This PR contains automated updates to image versions." \
+            || echo "PR already exists or cannot be created"
+
