--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -10,6 +10,7 @@ jobs:
       contents: write
       pull-requests: write
     steps:
+      - uses: actions/checkout@v3
       - name: Create Pull Request
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
