--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -12,9 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Create Pull Request
-        env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
+          echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
           gh pr create \
             --base test-wallet \
             --head image-updates \
