--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -13,20 +13,31 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Verify Authentication
+        run: |
+          echo "GH_TOKEN is set to: ${GH_TOKEN:-(not set)}"
+          gh auth status || echo "Authentication check failed"
+        env:
+          GH_TOKEN: ${{ secrets.GH_PAT }}
+
       - name: Create Pull Request
         id: create_pr
         run: |
+          echo "Attempting to create PR..."
           pr_url=$(gh pr create \
             --base test-wallet \
             --head image-updates \
             --title "Automated image updates" \
             --body "This PR contains automated updates to image versions from Argo CD Image Updater." \
-            || echo "")
+            2>/tmp/pr_error.log || echo "")
           if [[ -n "$pr_url" ]]; then
             pr_number=$(gh pr view "$pr_url" --json number -q .number)
             echo "pull-request-number=$pr_number" >> $GITHUB_OUTPUT
+            echo "PR created successfully: $pr_url"
           else
-            echo "No new PR created (it may already exist)."
+            echo "PR creation failed. Check /tmp/pr_error.log for details."
+            cat /tmp/pr_error.log
+            echo "No new PR created (it may already exist or authentication failed)."
             echo "pull-request-number=" >> $GITHUB_OUTPUT
           fi
         env:
@@ -35,6 +46,7 @@ jobs:
       - name: Enable Auto-Merge
         if: steps.create_pr.outputs.pull-request-number
         run: |
+          echo "Attempting to merge PR #${{ steps.create_pr.outputs.pull-request-number }}"
           gh pr merge ${{ steps.create_pr.outputs.pull-request-number }} --squash --auto
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
