--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -9,46 +9,14 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    env:
-      GH_TOKEN: ${{ secrets.GH_PAT }}  # Set at job level
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Verify Authentication
-        run: |
-          echo "GH_TOKEN is set to: ${GH_TOKEN:-(not set)}"
-          if [ -z "$GH_TOKEN" ]; then
-            echo "GH_TOKEN is not set, using GITHUB_TOKEN as fallback."
-            GH_TOKEN=${{ github.token }}
-            echo "Fallback GH_TOKEN is set to: ${GH_TOKEN:-(not set)}"
-          fi
-          gh auth status || echo "Authentication check failed"
-
+      - uses: actions/checkout@v3
       - name: Create Pull Request
-        id: create_pr
         run: |
-          echo "Attempting to create PR..."
-          pr_url=$(gh pr create \
+          echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
+          gh pr create \
             --base test-wallet \
             --head image-updates \
             --title "Automated image updates" \
-            --body "This PR contains automated updates to image versions from Argo CD Image Updater." \
-            2>/tmp/pr_error.log || echo "")
-          if [[ -n "$pr_url" ]]; then
-            pr_number=$(gh pr view "$pr_url" --json number -q .number)
-            echo "pull-request-number=$pr_number" >> $GITHUB_OUTPUT
-            echo "PR created successfully: $pr_url"
-          else
-            echo "PR creation failed. Check /tmp/pr_error.log for details."
-            cat /tmp/pr_error.log
-            echo "No new PR created (it may already exist or authentication failed)."
-            echo "pull-request-number=" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Enable Auto-Merge
-        if: steps.create_pr.outputs.pull-request-number
-        run: |
-          echo "Attempting to merge PR #${{ steps.create_pr.outputs.pull-request-number }}"
-          gh pr merge ${{ steps.create_pr.outputs.pull-request-number }} --squash --auto
-          
+            --body "This PR contains automated updates to image versions." \
+            || echo "PR already exists or cannot be created"
