--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -13,15 +13,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: Create Pull Request
         run: |
+          echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
           gh pr create \
             --base test-wallet \
             --head image-updates \
             --title "Automated image updates" \
             --body "This PR contains automated updates to image versions." \
             || echo "PR already exists or cannot be created"
-
-      - name: Enable Auto-Merge
-        if: steps.create_pr.outputs.pull-request-number
-        run: |
-          echo "Attempting to merge PR #${{ steps.create_pr.outputs.pull-request-number }}"
-          gh pr merge ${{ steps.create_pr.outputs.pull-request-number }} --squash --auto
+            
