fix: resolve image updater commit issues and workflow auth

--- a/wallet-chart/values.yaml
+++ b/wallet-chart/values.yaml
@@ -8,7 +8,7 @@
 globals:
   image: &walletImage
     repository: ghcr.io/adorsys-gis/wallet-vc
-    tag: latest@sha256:9741b52426d86e91d20eaf027fc2850e17a602557ebdac478176891598372282
+    tag: latest
     pullPolicy: Always
   ingressHost: &ingressHost 'demo-wallet.eudi-adorsys.com'
   tlsHosts: &tlsHosts
