--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Create Pull Request
         env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh pr create \
             --base test-wallet \
