--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -9,25 +9,26 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-      actions: read
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Create Pull Request
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
+      - name: Debug Token
         run: |
-          # Check if PR already exists
-          if gh pr list --head image-updates --base test-wallet --state open | grep -q "image-updates"; then
-            echo "PR already exists, updating it..."
-            gh pr edit --head image-updates --title "Automated image updates" --body "This PR contains automated updates to image versions."
-          else
-            echo "Creating new PR..."
-            gh pr create \
-              --base test-wallet \
-              --head image-updates \
-              --title "Automated image updates" \
-              --body "This PR contains automated updates to image versions." \
-              || echo "Failed to create PR"
+          echo "Checking authentication status..."
+          gh auth status
+      - name: Check for Existing PR
+        run: |
+          gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+          existing_pr=$(gh pr list --base develop --head image-updates --state open --json number --jq '.[0].number')
+          if [ -n "$existing_pr" ]; then
+            echo "PR already exists: #$existing_pr"
+            exit 0
           fi
+      - name: Create Pull Request
+        run: |
+          gh pr create \
+            --base develop \
+            --head image-updates \
+            --title "Automated image updates" \
+            --body "This PR contains automated updates to image versions." \
+            || echo "Failed to create PR"
+            
