--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -16,12 +16,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install GitHub CLI
+      - name: Install GitHub CLI (from .deb)
         run: |
-          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
-          sudo apt-add-repository https://cli.github.com/packages
-          sudo apt update
-          sudo apt install -y gh
+          curl -LO https://github.com/cli/cli/releases/download/v2.45.0/gh_2.45.0_linux_amd64.deb
+          sudo dpkg -i gh_2.45.0_linux_amd64.deb
 
       - name: Debug Environment
         run: |
