--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -16,29 +16,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Check for Existing PR
-        id: check_pr
+      - name: Authenticate with GitHub CLI
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
-          pr_response=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-            "https://api.github.com/repos/${{ github.repository }}/pulls?head=${{ github.repository_owner }}:image-updates&base=develop&state=open")
-          
-          pr_number=$(echo "$pr_response" | jq '.[0].number // empty')
-          echo "Found PR #: $pr_number"
-          echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
+          echo "${GH_TOKEN}" | gh auth login --with-token --hostname github.com
+          gh auth status
 
-      - name: Create Pull Request (via REST API)
-        if: steps.check_pr.outputs.pr_number == ''
+      - name: Create Pull Request
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
-          curl -X POST -H "Authorization: token $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{ github.repository }}/pulls \
-            -d '{
-              "title": "Automated image updates",
-              "head": "image-updates",
-              "base": "test-wallet",
-              "body": "This PR contains automated updates to image versions."
-            }'
+          gh pr create \
+            --base develop \
+            --head image-updates \
+            --title "Automated image updates" \
+            --body "This PR contains automated updates to image versions." \
+            || echo "PR already exists or cannot be created"
