--- a/.github/workflows/call-pr-creator.yml
+++ b/.github/workflows/call-pr-creator.yml
@@ -11,4 +11,5 @@ jobs:
     with:
       source_branch: image-update
       target_branch: add-pr-creator-workflow
-  
+    secrets:
+      GH_PAT: ${{ secrets.GH_PAT }}
