--- a/.github/workflows/call-pr-creator.yml
+++ b/.github/workflows/call-pr-creator.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   call-pr-creator:
-    uses: ADORSYS-GIS/datev-argo-apps/.github/workflows/pr-creator.yml@feat/create-pr-image-updater
+    uses: ADORSYS-GIS/datev-argo-apps/.github/workflows/pr-creator.yml@main
     with:
       source_branch: image-update
       target_branch: add-pr-creator-workflow
