--- a/.github/workflows/call-pr-creator.yml
+++ b/.github/workflows/call-pr-creator.yml
@@ -11,7 +11,6 @@ jobs:
     uses: ADORSYS-GIS/datev-argo-apps/.github/workflows/pr-creator.yml@feat/create-pr-image-updater
     with:
       source_branch: image-update
-      target_branch: add-pr-creator-workflow
+      distination_branch: add-pr-creator-workflow
     secrets:
       GH_PAT: ${{ secrets.GH_PAT }}
-      
