--- a/.github/workflows/pr-creator-image-updater.yml
+++ b/.github/workflows/pr-creator-image-updater.yml
@@ -16,7 +16,7 @@ jobs:
         uses: diillson/auto-pull-request@v1.0.1
         with:
           source_branch: 'image-update'
-          destination_branch: 'main'
+          destination_branch: 'add-pr-creator-workflow'
           pr_title: '${{ env.GIT_COMMIT_MESSAGE_SUBJECT }}'
           pr_body: |
             ${{ env.GIT_COMMIT_MESSAGE_SUBJECT }}
