--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -12,6 +12,7 @@ env:
 
 jobs:
   build-and-deploy:
+    if: ${{ github.event.head_commit.author.email != 'ci@adorsys.com' }}
     runs-on: ubuntu-latest
 
     permissions:
