--- a/wallet-chart/values.yaml
+++ b/wallet-chart/values.yaml
@@ -8,28 +8,22 @@
 globals:
   image: &walletImage
     repository: ghcr.io/adorsys-gis/wallet-vc
-    tag: latest
+    tag: latest@sha256:880dcf3fcc8be4e29f3630140c38203b91ce442481bc7ba08a2083bc950b95ad
     pullPolicy: Always
-
   ingressHost: &ingressHost 'demo-wallet.eudi-adorsys.com'
-
   tlsHosts: &tlsHosts
     - '*.eudi-adorsys.com'
     - 'eudi-adorsys.com'
-
 # ============================================================================
-
 app-template:
   global:
     fullnameOverride: demo-wallet
     namespace: datev-wallet
     labels:
       app: demo-wallet
-
   defaultPodOptions:
     imagePullSecrets:
       - name: ghcr-pull-secret
-
   controllers:
     wallet:
       type: deployment
@@ -42,7 +36,6 @@ app-template:
             - name: http
               containerPort: 8080
               protocol: TCP
-
   service:
     app:
       enabled: true
@@ -54,7 +47,6 @@ app-template:
           port: 8081
           protocol: HTTP
           targetPort: 8080
-
   ingress:
     app:
       enabled: true
